# meetily

./: package-lock.json
frontend/: build.bat
frontend/src-tauri/: Cargo.toml  build.rs
frontend/src-tauri/patches/knf-rs/: build.rs
frontend/src-tauri/patches/knf-rs/knf/: CMakeLists.txt
frontend/src-tauri/patches/knf-rs/knfc/: CMakeLists.txt
frontend/src-tauri/src/: lib.rs  segments.rs  vad_engine.rs
frontend/src-tauri/src/api/: api.rs
frontend/src-tauri/src/audio/: audio_processing.rs  incremental_saver.rs  mod.rs  pipeline.rs  recording_preferences.rs
frontend/src-tauri/src/audio/devices/: discovery.rs  fallback.rs
frontend/src-tauri/src/notifications/: commands.rs
frontend/src-tauri/src/pyannote/: embedding.rs  models.rs  segment.rs  session.rs
frontend/src-tauri/src/summary/summary_engine/: sidecar.rs
frontend/src-tauri/src/whisper_engine/: commands.rs  parallel_commands.rs  parallel_processor.rs  whisper_engine.rs
frontend/src/app/: layout.tsx
frontend/src/app/meeting-details/: page-content.tsx  page.tsx
frontend/src/components/: LanguageSelection.tsx  ModelSettingsModal.tsx  ParakeetModelManager.tsx  RecordingSettings.tsx  TranscriptSettings.tsx  TranscriptView.tsx  VirtualizedTranscriptView.tsx  WhisperModelManager.tsx
frontend/src/components/ImportAudio/: ImportAudioDialog.tsx
frontend/src/components/MeetingDetails/: RetranscribeDialog.tsx  TranscriptButtonGroup.tsx  TranscriptPanel.tsx
frontend/src/components/shared/: DownloadProgressToast.tsx  TranscriptionProgressToast.tsx
frontend/src/hooks/meeting-details/: useCopyOperations.ts
frontend/src/lib/: recordingNotification.tsx  whisper.ts
